--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Tasks#index</h1>
-<p>Find me in app/views/tasks/index.html.erb</p>
+<h1>MY TASKS>>>></h1>
+<br>
+<h1><% @tasks.each do |task| %></h1>
+<%= link_to task.title , task_path(task) %>
+<h6><%= task.completed %></h6>
+<%= link_to "Edit", edit_task_path(task)  %>
+<%= link_to "Delete", delete_task_path(task), method: :delete  %>
+<p>...............................</p>
+<% end %>
+<p>...............................</p>
+<%= link_to "Create a new task" , new_task_path %>
